--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+* {
+  font-family: 'JetBrains Mono', monospace;
+}
+body {
+  background-color: #d9d9d9;
+}
 .App {
   text-align: center;
 }
@@ -35,4 +41,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+img {
+  text-align: center;
 }
